--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome</title>
+    <title>ShibeSales | Home</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <script src="js/vendor/modernizr.js"></script>
   </head>
@@ -95,11 +95,11 @@
             </h5>
           </div>
  
-          <a href="#">
           <div class="panel callout radius">
-            <h6>99  items in your cart</h6>
+          <h6>Powered by:
+            <a href="#">DogeAPI</a>
+          </h6>
           </div>
-          </a>
  
         </div>
  
@@ -111,57 +111,70 @@
         <div class="large-8 columns">
           <div class="row">
  
+<!--Here is an example listing:
+
             <div class="large-4 small-6 columns">
-              <img src="http://placehold.it/1000x1000&text=Thumbnail">
+              <img src="http://placekitten.com/800/800">
  
               <div class="panel">
                 <h5>Item Name</h5>
-                <h6 class="subheader">$000.00</h6>
+                <h6 class="subheader">Ð<span class="price"></span></h6>
+              </div>
+            </div>
+
+-->
+
+            <div class="large-4 small-6 columns">
+              <img src="http://placekitten.com/800/800">
+ 
+              <div class="panel">
+                <h5>Item Name</h5>
+                <h6 class="subheader">Ð<span class="price">100</span></h6>
               </div>
             </div>
  
             <div class="large-4 small-6 columns">
-              <img src="http://placehold.it/500x500&text=Thumbnail">
+              <img src="http://placekitten.com/1100/1100">
  
               <div class="panel">
                 <h5>Item Name</h5>
-                <h6 class="subheader">$000.00</h6>
+                <h6 class="subheader">Ð<span class="price">100</span></h6>
               </div>
             </div>
  
             <div class="large-4 small-6 columns">
-              <img src="http://placehold.it/500x500&text=Thumbnail">
+              <img src="http://placekitten.com/700/700">
  
               <div class="panel">
                 <h5>Item Name</h5>
-                <h6 class="subheader">$000.00</h6>
+                <h6 class="subheader">Ð<span class="price">100</span></h6>
               </div>
             </div>
  
             <div class="large-4 small-6 columns">
-              <img src="http://placehold.it/500x500&text=Thumbnail">
+              <img src="http://placekitten.com/1000/1000">
  
               <div class="panel">
                 <h5>Item Name</h5>
-                <h6 class="subheader">$000.00</h6>
+                <h6 class="subheader">Ð<span class="price">100</span></h6>
               </div>
             </div>
  
             <div class="large-4 small-6 columns">
-              <img src="http://placehold.it/500x500&text=Thumbnail">
+              <img src="http://placekitten.com/200/200">
  
               <div class="panel">
                 <h5>Item Name</h5>
-                <h6 class="subheader">$000.00</h6>
+                <h6 class="subheader">Ð<span class="price">100</span></h6>
               </div>
             </div>
  
             <div class="large-4 small-6 columns">
-              <img src="http://placehold.it/500x500&text=Thumbnail">
+              <img src="http://placekitten.com/500/500">
  
               <div class="panel">
                 <h5>Item Name</h5>
-                <h6 class="subheader">$000.00</h6>
+                <h6 class="subheader">Ð<span class="price">100</span></h6>
               </div>
             </div>
           </div>
@@ -203,7 +216,7 @@
           <div class="row">
  
             <div class="large-6 columns">
-              <p>© Copyright no one at all. Go to town.</p>
+              <p>© <a href="">ShibeSales</a> 2014</p>
             </div>
  
             <div class="large-6 columns">
@@ -227,7 +240,7 @@
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script>
-      $(document).foundation();
+      Ð(document).foundation();
     </script>
   </body>
 </html>
