--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>ShibeSales | Home</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <script src="js/vendor/modernizr.js"></script>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div class="row">
