--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script>
-      Ð(document).foundation();
+      $(document).foundation();
     </script>
   </body>
 </html>
