Went to dark theme

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
      
  
       <footer class="row">
-        <div class="large-12 columns"><hr/>
+        <div class="large-12 columns"><img src="img/rightcol_bg_block.png">
           <div class="row">
  
             <div class="large-6 columns">
