Added gradient borders

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </h5>
           </div>
  
-          <div class="panel callout radius">
+          <div class="panel radius">
           <h6>Powered by:
             <a href="#">DogeAPI</a>
           </h6>
@@ -176,7 +176,8 @@
      
  
       <footer class="row">
-        <div class="large-12 columns"><img src="img/rightcol_bg_block.png">
+        <div class="large-12 columns">
+          <div class="horizontal-line"></div>
           <div class="row">
  
             <div class="large-6 columns">
