Commented out footer links

--- a/index.html
+++ b/index.html
@@ -184,14 +184,14 @@
               <p>© <a href="">ShibeSales</a> 2014</p>
             </div>
  
-            <div class="large-6 columns">
+            <!--<div class="large-6 columns">
               <ul class="inline-list right">
                 <li><a href="#">Link 1</a></li>
                 <li><a href="#">Link 2</a></li>
                 <li><a href="#">Link 3</a></li>
                 <li><a href="#">Link 4</a></li>
               </ul>
-            </div>
+            </div>-->
  
           </div>
         </div>
