--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
               <ul class="right">
                 <li class="divider"></li>
                 <li><a href="">FAQ</a></li>
+                <li class="divider"></li>
+                <li><a href="">Contact</a></li>
+                <li class="divider"></li>
               </ul>
             </section>
           </nav>
@@ -147,7 +150,7 @@
  
  
      
-          <div class="row">
+          <!--<div class="row">
             <div class="large-12 columns">
               <div class="panel">
                 <div class="row">
@@ -168,7 +171,7 @@
  
      
  
-          </div>
+          </div>-->
         </div>
       </div>
  
