Updated listing style

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
  
    
  
-        <div class="large-4 small-12 columns">
+        <div class="large-2 small-12 columns">
  
           <img src="http://placehold.it/500x500&text=Logo">
  
@@ -75,76 +75,171 @@
  
      
  
-        <div class="large-8 columns">
+        <div class="large-10 columns">
           <div class="row">
+
+
+            <div class="large-4 small-6 columns">
+              <img src="http://placekitten.com/800/800">
+              <div class="panel">
+                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                <h6 class="subheader">Ð<span class="price">75</span></h6>
+              </div>
+            </div>
+ 
+            <div class="large-4 small-6 columns">
+              <img src="http://placekitten.com/800/800">
+              <div class="panel">
+                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                <h6 class="subheader">Ð<span class="price">75</span></h6>
+              </div>
+            </div>
+ 
+            <div class="large-4 small-6 columns">
+              <img src="http://placekitten.com/800/800">
+              <div class="panel">
+                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                <h6 class="subheader">Ð<span class="price">75</span></h6>
+              </div>
+            </div>
+
+
+<div class="row">
  
 <!--Here is an example listing:
 
             <div class="large-4 small-6 columns">
               <img src="http://placekitten.com/800/800">
- 
               <div class="panel">
-                <h5>Item Name</h5>
-                <h6 class="subheader">Ð<span class="price"></span></h6>
+                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                <h6 class="subheader">Ð<span class="price">75</span></h6>
               </div>
             </div>
 
 -->
 
-            <div class="large-4 small-6 columns">
-              <img src="http://placekitten.com/800/800">
- 
+            <div class="large-3 small-6 columns">
+              <img src="http://placekitten.com/292/136">
               <div class="panel">
-                <h5>Item Name</h5>
-                <h6 class="subheader">Ð<span class="price">100</span></h6>
+                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                <h6 class="subheader">Ð<span class="price">75</span></h6>
+              </div>
+            </div>
+
+            <div class="large-3 small-6 columns">
+              <img src="http://placekitten.com/292/136">
+              <div class="panel">
+                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                <h6 class="subheader">Ð<span class="price">75</span></h6>
+              </div>
+            </div>
+
+            <div class="large-3 small-6 columns">
+              <img src="http://placekitten.com/292/136">
+              <div class="panel">
+                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                <h6 class="subheader">Ð<span class="price">75</span></h6>
               </div>
             </div>
  
-            <div class="large-4 small-6 columns">
-              <img src="http://placekitten.com/1100/1100">
- 
+            <div class="large-3 small-6 columns">
+              <img src="http://placekitten.com/292/136">
               <div class="panel">
-                <h5>Item Name</h5>
-                <h6 class="subheader">Ð<span class="price">100</span></h6>
+                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                <h6 class="subheader">Ð<span class="price">75</span></h6>
               </div>
             </div>
  
-            <div class="large-4 small-6 columns">
-              <img src="http://placekitten.com/700/700">
- 
+            <div class="large-3 small-6 columns">
+              <img src="http://placekitten.com/292/136">
               <div class="panel">
-                <h5>Item Name</h5>
-                <h6 class="subheader">Ð<span class="price">100</span></h6>
+                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                <h6 class="subheader">Ð<span class="price">75</span></h6>
               </div>
             </div>
  
-            <div class="large-4 small-6 columns">
-              <img src="http://placekitten.com/1000/1000">
- 
+            <div class="large-3 small-6 columns">
+              <img src="http://placekitten.com/292/136">
               <div class="panel">
-                <h5>Item Name</h5>
-                <h6 class="subheader">Ð<span class="price">100</span></h6>
+                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                <h6 class="subheader">Ð<span class="price">75</span></h6>
               </div>
             </div>
  
-            <div class="large-4 small-6 columns">
-              <img src="http://placekitten.com/200/200">
- 
+            <div class="large-3 small-6 columns">
+              <img src="http://placekitten.com/292/136">
               <div class="panel">
-                <h5>Item Name</h5>
-                <h6 class="subheader">Ð<span class="price">100</span></h6>
+                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                <h6 class="subheader">Ð<span class="price">75</span></h6>
+              </div>
+            </div>
+
+            <div class="large-3 small-6 columns">
+              <img src="http://placekitten.com/292/136">
+              <div class="panel">
+                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                <h6 class="subheader">Ð<span class="price">75</span></h6>
+              </div>
+            </div>
+
+            <div class="large-3 small-6 columns">
+              <img src="http://placekitten.com/292/136">
+              <div class="panel">
+                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                <h6 class="subheader">Ð<span class="price">75</span></h6>
               </div>
             </div>
  
-            <div class="large-4 small-6 columns">
-              <img src="http://placekitten.com/500/500">
- 
+            <div class="large-3 small-6 columns">
+              <img src="http://placekitten.com/292/136">
               <div class="panel">
-                <h5>Item Name</h5>
-                <h6 class="subheader">Ð<span class="price">100</span></h6>
+                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                <h6 class="subheader">Ð<span class="price">75</span></h6>
               </div>
             </div>
-          </div>
+ 
+            <div class="large-3 small-6 columns">
+              <img src="http://placekitten.com/292/136">
+              <div class="panel">
+                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                <h6 class="subheader">Ð<span class="price">75</span></h6>
+              </div>
+            </div>
+ 
+            <div class="large-3 small-6 columns">
+              <img src="http://placekitten.com/292/136">
+              <div class="panel">
+                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                <h6 class="subheader">Ð<span class="price">75</span></h6>
+              </div>
+            </div>
+ 
+            <div class="large-3 small-6 columns">
+              <img src="http://placekitten.com/292/136">
+              <div class="panel">
+                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                <h6 class="subheader">Ð<span class="price">75</span></h6>
+              </div>
+            </div>
+
+ 
  
      
  
