--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <li class="name">
                 <h1>
                   <a href="#">
-                    Top Bar Title
+                    Shibe Sales
                   </a>
                 </h1>
               </li>
@@ -54,11 +54,11 @@
  
         <div class="large-2 small-12 columns">
  
-          <img src="http://placehold.it/500x500&text=Logo">
+          <img src="img/ShibeSales.png">
  
           <div class="hide-for-small panel">
-            <h3>Header</h3>
-            <h5 class="subheader">Risus ligula, aliquam nec fermentum vitae, sollicitudin eget urna. Donec dignissim nibh fermentum odio ornare sagittis.
+            <h3>Miss a steam sale?</h3>
+            <h5 class="subheader">Buy the game on sale with Ðogecoin!
             </h5>
           </div>
  
@@ -276,7 +276,7 @@
       <footer class="row">
         <div class="large-12 columns">
           <div class="horizontal-line"></div>
-          <div class="row">
+          <div class="row footer" style="font-size: .25em;">
  
             <div class="large-6 columns">
               <p>© <a href="">ShibeSales</a> 2014</p>
