--- a/1.html
+++ b/1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ShibeSales | Game name</title>
+    <title id="title">ShibeSales | Game name</title>
     <link rel="stylesheet" href="css/foundation.min.css" />
     <link rel="stylesheet" href="css/custom.css" />
     <script src="js/vendor/modernizr.js"></script>
@@ -200,9 +200,9 @@
     
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
-    <script src="js/custom.js"></script>
     <script>
       $(document).foundation();
     </script>
+    <script src="js/custom.js"></script>
   </body>
 </html>
