--- a/1.html
+++ b/1.html
@@ -81,7 +81,7 @@
                   <div class="large-10 small-6 columns">
                     <strong><h2 id="game-name">A game about cats</h2><hr/></strong>
                       <h4>Game description</h4>
-                      <p id="description">Lorem ipsum dolor sit amet, ex denique facilisis omittantur mea, in enim omittantur adversarium quo, sea in vero oblique. Mea altera facilisis signiferumque ei, eu cibo omnes vim. Qui error timeam no, quidam expetenda et usu. Qui dolore nostrum ei.</p>
+                      <p id="game-description">Lorem ipsum dolor sit amet, ex denique facilisis omittantur mea, in enim omittantur adversarium quo, sea in vero oblique. Mea altera facilisis signiferumque ei, eu cibo omnes vim. Qui error timeam no, quidam expetenda et usu. Qui dolore nostrum ei.</p>
 <h4>I'm a list of features</h4>
 <p>
   <ul>
