--- a/1.html
+++ b/1.html
@@ -23,7 +23,7 @@
                
               <li class="name">
                 <h1>
-                  <a href="#">
+                  <a href="Index.html">
                     Shibe Sales
                   </a>
                 </h1>
@@ -35,9 +35,11 @@
                
               <ul class="right">
                 <li class="divider"></li>
-                <li><a href="">FAQ</a></li>
+                <li><a href="faq.html">FAQ</a></li>
                 <li class="divider"></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li class="divider"></li>
+                <li><a href="recommend.html">Recommend a game</a></li>
                 <li class="divider"></li>
               </ul>
             </section>
@@ -64,7 +66,7 @@
  
           <div class="panel radius">
           <h6>Powered by:
-            <a href="#">DogeAPI</a>
+            <a href="https://www.dogeapi.com/">DogeAPI</a>
           </h6>
           </div>
  
