--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                
               <li class="name">
                 <h1>
-                  <a href="#">
+                  <a href="Index.html">
                     Shibe Sales
                   </a>
                 </h1>
@@ -35,9 +35,11 @@
                
               <ul class="right">
                 <li class="divider"></li>
-                <li><a href="">FAQ</a></li>
+                <li><a href="faq.html">FAQ</a></li>
                 <li class="divider"></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li class="divider"></li>
+                <li><a href="recommend.html">Recommend a game</a></li>
                 <li class="divider"></li>
               </ul>
             </section>
@@ -58,13 +60,13 @@
  
           <div class="hide-for-small panel">
             <h3>Miss a steam sale?</h3>
-            <h5 class="subheader">Buy the game on sale with Ðogecoin!
+            <h5 class="subheader">Buy the game on sale with <a href="http://dogecoin.com/">Ðogecoin</a>!
             </h5>
           </div>
  
           <div class="panel radius">
           <h6>Powered by:
-            <a href="#">DogeAPI</a>
+            <a href="https://www.dogeapi.com/">ƉogeAPI</a>
           </h6>
           </div>
  
@@ -79,32 +81,38 @@
           <div class="row">
 
 
-            <div class="large-4 small-6 columns">
-              <img src="http://placekitten.com/800/800">
-              <div class="panel">
-                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
-                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
-                <h6 class="subheader">Ð<span class="price">75</span></h6>
+            <a href="1.html">
+              <div class="large-4 small-6 columns">
+                <img src="http://placekitten.com/800/800">
+                <div class="panel">
+                  <h5><span id="item1">Item Name </span><span class="sale"><span class="percentage">25</span>%</span></h5>
+                  <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                  <h6 class="subheader">Ð<span class="price">75</span></h6>
+                </div>
               </div>
-            </div>
+            </a>
+  
+            <a href="2.html">
+              <div class="large-4 small-6 columns">
+                <img src="http://placekitten.com/800/800">
+                <div class="panel">
+                  <h5><span id="item2">Item Name </span><span class="sale"><span class="percentage">25</span>%</span></h5>
+                  <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                  <h6 class="subheader">Ð<span class="price">75</span></h6>
+                </div>
+              </div>
+            </a>
  
-            <div class="large-4 small-6 columns">
-              <img src="http://placekitten.com/800/800">
-              <div class="panel">
-                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
-                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
-                <h6 class="subheader">Ð<span class="price">75</span></h6>
+            <a href="3.html">
+              <div class="large-4 small-6 columns">
+                <img src="http://placekitten.com/800/800">
+                <div class="panel">
+                  <h5><span id="item3">Item Name </span><span class="sale"><span class="percentage">25</span>%</span></h5>
+                  <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
+                  <h6 class="subheader">Ð<span class="price">75</span></h6>
+                </div>
               </div>
-            </div>
- 
-            <div class="large-4 small-6 columns">
-              <img src="http://placekitten.com/800/800">
-              <div class="panel">
-                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
-                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
-                <h6 class="subheader">Ð<span class="price">75</span></h6>
-              </div>
-            </div>
+            </a>
 
 
 <div class="row">
