--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                
               <li class="name">
                 <h1>
-                  <a href="Index.html">
+                  <a href="index.html">
                     Shibe Sales
                   </a>
                 </h1>
