Added buy button

--- a/1.html
+++ b/1.html
@@ -79,6 +79,7 @@
                   <div class="large-2 small-6 columns">
                     <img id="game-img" src="http://placekitten.com/292/136">
                   </div>
+                  <button id="buy-button" class="success"></button>
  
                   <div class="large-10 small-6 columns">
                     <strong><h2 id="game-name">A game about cats</h2><hr/></strong>
