Head back now appears when user feedback is submitted

--- a/moolah-recommend.html
+++ b/moolah-recommend.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ShibeSales | FAQ</title>
+    <title>ShibeSales | Recommend</title>
     <link rel="stylesheet" href="css/foundation.min.css" />
     <link rel="stylesheet" href="css/custom.css" />
     <script src="js/vendor/modernizr.js"></script>
@@ -49,8 +49,8 @@
           <input id="game-title" placeholder="game title" type="text">
           <input id="email" placeholder="email (optional)" type="email">
         </form>
-        <button class="success" onClick="recommend();">Submit!</button>
-        <a href="https://moolah.io/store/384" class="button">Head back to the store</a>
+        <button class="success" onClick="recommend(); ">Submit!</button>
+        <a href="https://moolah.io/store/384" class="button" id="headBack">Head back to the store</a>
       </div>
     </div>
   </div>
