Head back now invisible by default

--- a/moolah-recommend.html
+++ b/moolah-recommend.html
@@ -50,7 +50,7 @@
           <input id="email" placeholder="email (optional)" type="email">
         </form>
         <button class="success" onClick="recommend(); ">Submit!</button>
-        <a href="https://moolah.io/store/384" class="button" id="headBack">Head back to the store</a>
+        <a href="https://moolah.io/store/384" style="display: none;" class="button" id="headBack">Head back to the store</a>
       </div>
     </div>
   </div>
