Changed ids in 1.html

--- a/1.html
+++ b/1.html
@@ -72,13 +72,16 @@
  
         </div>
 <div class="row">
-  <div class="large-9 columns">
+            <div class="large-9 columns" id="product">
               <div class="panel">
                 <div class="row">
  
                   <div class="large-2 small-6 columns">
                     <img id="game-img" src="http://placekitten.com/292/136">
-                    <button id="buy-button" class="success"></button>
+                    <h6 class="subheader strikeout">Ð<span id="previous-game-price">100</span></h6>
+                    <h6 class="subheader">Ð<span id="game-price">75</span><span class="game-sale"><span id="game-percentage">25</span>% off</span></h6>
+
+                    <button id="buy-button" class="success">Buy</button>
                   </div>
  
                   <div class="large-10 small-6 columns">
@@ -98,55 +101,25 @@
  
 <!--Here is an example listing:
 
-            <div class="large-4 small-6 columns">
-              <img src="http://placekitten.com/800/800">
+            <div class="large-3 small-6 columns">
+              <img id="foot-image-listing-1" src="http://placekitten.com/292/136">
               <div class="panel">
-                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
-                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
-                <h6 class="subheader">Ð<span class="price">75</span></h6>
+                <h5><span id="foot-listing-1">Item Name</span> <span class="sale"><span class="discount-percentage-1">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="original-price-1">100</span></h6>
+                <h6 class="subheader">Ð<span id="discount-1">75</span></h6>
               </div>
             </div>
 
 -->
-
-            <div class="large-3 small-6 columns">
-              <img src="http://placekitten.com/292/136">
+    <div id="footer-container"></div>
+            <div id="foot-listing-div-1" class="large-3 small-6 columns">
+              <img id="foot-image-listing-1" src="http://placekitten.com/292/136">
               <div class="panel">
-                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
-                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
-                <h6 class="subheader">Ð<span class="price">75</span></h6>
+                <h5><span id="foot-listing-1">Item Name</span> <span class="sale"><span class="discount-percentage-1">25</span>%</span></h5>
+                <h6 class="subheader strikeout">Ð<span class="original-price-1">100</span></h6>
+                <h6 class="subheader">Ð<span id="discount-1">75</span></h6>
               </div>
             </div>
-
-            <div class="large-3 small-6 columns">
-              <img src="http://placekitten.com/292/136">
-              <div class="panel">
-                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
-                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
-                <h6 class="subheader">Ð<span class="price">75</span></h6>
-              </div>
-            </div>
-
-            <div class="large-3 small-6 columns">
-              <img src="http://placekitten.com/292/136">
-              <div class="panel">
-                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
-                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
-                <h6 class="subheader">Ð<span class="price">75</span></h6>
-              </div>
-            </div>
- 
-            <div class="large-3 small-6 columns">
-              <img src="http://placekitten.com/292/136">
-              <div class="panel">
-                <h5>Item Name <span class="sale"><span class="percentage">25</span>%</span></h5>
-                <h6 class="subheader strikeout">Ð<span class="price">100</span></h6>
-                <h6 class="subheader">Ð<span class="price">75</span></h6>
-              </div>
-            </div>
-
- 
- 
      
  
  
