Added reddit username for summer sales

--- a/moolah-recommend.html
+++ b/moolah-recommend.html
@@ -45,9 +45,11 @@
     <div class="large-10 columns panel small-centered">
       <div class="small-8 small-centered columns">
         <h3 id="instructions">Want us to stock up on a game when it goes on sale? Recommend it here! We'll also send you a notification if you provide your email.</h3>
+        <h4>*Shibe Summer Sales: Add your reddit username for an extra tip if your game goes on sale!</h4>
         <form>
           <input id="game-title" placeholder="game title" type="text">
           <input id="email" placeholder="email (optional)" type="email">
+          <input id="reddit" placeholder="reddit username (optional)" type="email">
         </form>
         <button class="success" onClick="recommend(); ">Submit!</button>
         <a href="https://moolah.io/store/384" style="display: none;" class="button" id="headBack">Head back to the store</a>
